// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`when validating domain entity domain item duplicates domain items should have one validation failure 1`] = `"Domain Item 'DomainEntityName' of type 'domainEntity' has a duplicate within the same type."`;

exports[`when validating domain entity domain item duplicates domain items should have one validation failure 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityName",
}
`;

exports[`when validating domain entity domain item has multiple duplicate domain items should have multiple validation failures 1`] = `"Domain Item 'DomainEntityName' of type 'domainEntity' has a duplicate within the same type."`;

exports[`when validating domain entity domain item has multiple duplicate domain items should have multiple validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityName",
}
`;

exports[`when validating domain entity domain item has multiple duplicate domain items should have multiple validation failures 3`] = `"Domain Item 'DomainEntityName2' of type 'domainEntity' has a duplicate within the same type."`;

exports[`when validating domain entity domain item has multiple duplicate domain items should have multiple validation failures 4`] = `
Object {
  "column": 18,
  "line": 8,
  "tokenText": "DomainEntityName2",
}
`;
